clusters/common/apps/monitoring/karma/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karma
  labels:
    app: karma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karma
  template:
    metadata:
      labels:
        app: karma
    spec:
      containers:
      - name: karma
        image: ghcr.io/prymitive/karma:v0.121
        resources:
          requests:
            cpu: 15m
            memory: 25M
          limits:
            cpu: 100m
            memory: 128Mi
        ports:
        - name: karma
          protocol: TCP
          containerPort: 8080
