clusters/common/apps/monitoring/karma/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karma
  namespace: monitoring
  annotations:
    item.homer.rajsingh.info/name: "Karma"
    item.homer.rajsingh.info/subtitle: "Alert Dashboard"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/svg/broadcastchannel.svg"
    item.homer.rajsingh.info/tag: "monitoring"
    item.homer.rajsingh.info/keywords: "alerts, dashboard, monitoring"

    service.homer.rajsingh.info/name: "Monitoring"
    service.homer.rajsingh.info/icon: "fas fa-chart-line"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "karma.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: karma
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
